add_library(proof OBJECT "")

target_sources(proof
PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/PG.h"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGBuild.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGCheck.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGHelp.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGHeuristics.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGInterpolator.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGMain.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGPrint.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGRules.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PGTransformationAlgorithms.cc"
PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/InterpolationContext.cc"
)

install(FILES InterpolationContext.h DESTINATION ${INSTALL_HEADERS_DIR})

