noinst_LTLIBRARIES = libsimplifiers.la

INCLUDES=$(config_includedirs)

libsimplifiers_la_SOURCES = TopLevelPropagate.h TopLevelPropagate.C

#libsimplifiers_la_SOURCES = TopLevelProp.h TopLevelProp.C \
#			    ExpandITEs.h ExpandITEs.C \
#			    BVBooleanize.h BVBooleanize.C \
#			    DLRescale.h DLRescale.C \
#			    BVNormalize.h BVNormalize.C \
#			    Ackermanize.h Ackermanize.C \
#			    ArraySimplify.h ArraySimplify.C \
#			    Purify.C Purify.h \
#			    AXDiffPreproc.C AXDiffPreproc.h \
#			    AXDiffPreproc2.C AXDiffPreproc2.h
